fixing overflow on x mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -727,7 +727,6 @@ h3{
 
 body{
     overflow-x: hidden;
-    height: 100%
 }
 
 .green-ocean {
